@@ -1036,3 +1036,4 @@
 ( cvs diff -u -r 1.65.2.43 -r 1.65.2.44 src/codeconv.c;  cvs diff -u -r 1.15.2.13 -r 1.15.2.14 src/codeconv.h;  cvs diff -u -r 1.204.2.68 -r 1.204.2.69 src/prefs_common.c;  cvs diff -u -r 1.103.2.36 -r 1.103.2.37 src/prefs_common.h;  cvs diff -u -r 1.1.2.8 -r 1.1.2.9 src/prefs_message.c;  cvs diff -u -r 1.96.2.86 -r 1.96.2.87 src/textview.c;  cvs diff -u -r 1.4.2.25 -r 1.4.2.26 src/gtk/about.c;  ) > 1.9.100cvs50.patchset
 ( cvs diff -u -r 1.204.2.69 -r 1.204.2.70 src/prefs_common.c;  ) > 1.9.100cvs51.patchset
 ( cvs diff -u -r 1.382.2.198 -r 1.382.2.199 src/compose.c;  cvs diff -u -r 1.12.2.17 -r 1.12.2.18 src/prefs_template.c;  cvs diff -u -r 1.5.12.2 -r 1.5.12.3 src/quote_fmt.h;  cvs diff -u -r 1.22.2.14 -r 1.22.2.15 src/quote_fmt_parse.y;  ) > 1.9.100cvs52.patchset
+( cvs diff -u -r 1.13.2.15 -r 1.13.2.16 src/plugins/clamav/clamav_plugin.c;  cvs diff -u -r 1.9.2.12 -r 1.9.2.13 src/plugins/clamav/clamav_plugin_gtk.c;  ) > 1.9.100cvs53.patchset
