@@ -1,3 +1,10 @@
+2005-12-02 [paul]	1.9.100cvs53
+
+	* src/plugins/clamav/clamav_plugin.c
+		int no --> unsigned int no
+	* src/plugins/clamav/clamav_plugin_gtk.c
+		rework config page
+
 2005-12-02 [wwp]	1.9.100cvs52
 
 	* src/compose.c
